@@ -1,4 +1,4 @@
-<html><head><meta content="text/html; charset=ISO-8859-1" http-equiv="Content-Type"><title>xsltproc</title><meta name="generator" content="DocBook XSL Stylesheets V1.48"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry"><a name="id2745836"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>xsltproc &#8212; command line xslt processor</p></div><div class="refsynopsisdiv"><h2>Synopsis</h2><div class="cmdsynopsis"><p><tt>xsltproc</tt>  [-V | -v | -o <i><tt>file</tt></i> | --timing | --repeat | --debug | --novalid | --noout | --maxdepth <i><tt>val</tt></i> | --html | --docbook | --param <i><tt>name</tt></i> <i><tt>value</tt></i> | --stringparam <i><tt>name</tt></i> <i><tt>value</tt></i> | --nonet | --warnnet | --catalogs | --xinclude | --profile | --dumpextensions] [<tt><i><tt>stylesheet</tt></i></tt>] [<i><tt>file1</tt></i>] [<i><tt>file2</tt></i>] [<i><tt>....</tt></i>]</p></div></div><div class="refsect1"><a name="introduction"></a><h2>Introduction</h2><p>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><title>xsltproc</title><meta name="generator" content="DocBook XSL Stylesheets V1.48"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry"><a name="id2589055"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>xsltproc &#8212; command line xslt processor</p></div><div class="refsynopsisdiv"><h2>Synopsis</h2><div class="cmdsynopsis"><p><tt>xsltproc</tt>  [-V | -v | -o <i><tt>file</tt></i> | --timing | --repeat | --debug | --novalid | --noout | --maxdepth <i><tt>val</tt></i> | --html | --docbook | --param <i><tt>name</tt></i> <i><tt>value</tt></i> | --stringparam <i><tt>name</tt></i> <i><tt>value</tt></i> | --nonet | --catalogs | --xinclude | --profile | --dumpextensions] [<tt><i><tt>stylesheet</tt></i></tt>] [<i><tt>file1</tt></i>] [<i><tt>file2</tt></i>] [<i><tt>....</tt></i>]</p></div></div><div class="refsect1"><a name="introduction"></a><h2>Introduction</h2><p>
       xsltproc is a command line tool for applying
       XSLT stylesheets to XML
       documents. It is part of libxslt, the XSLT C
@@ -65,9 +65,6 @@
 	    identifier. (Note: The string must be utf-8.) </dd><dt><span class="term">
       <tt>--nonet</tt></span></dt><dd>Do not use the Internet to fetch DTD's or
       entities.
-    </dd><dt><span class="term">
-      <tt>--warnnet</tt></span></dt><dd>Output notification when DTD's or entities
-      are fetched over the Internet.
     </dd><dt><span class="term">
       <tt>--catalogs</tt></span></dt><dd>Use catalogs to resolve the location of
       external entities. This speeds DTD resolution. By having a
